<resources>
    <string name="app_name">NeoStore_App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_forgotpwd">ForgotpwdActivity</string>
    <string name="dont_have_an_account">DONT HAVE AN ACCOUNT?</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="i_agree_the_terms_and_condition">I agree the Terms and Condition</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="neostore">NeoSTORE</string>
    <string name="login">login</string>
    <string name="table">Tables</string>
    <string name="search">Search</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
</resources>
