<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Layout_margin"
        android:gravity="center"
        android:orientation="vertical">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="NeoSTORE"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:padding="@dimen/text_padding"/>
    <EditText
            android:background="@drawable/edittxt_style"
            style="@style/Style_text"
            android:drawableLeft="@drawable/username_icon"
            android:hint="@string/first_name"
            android:layout_marginBottom="@dimen/bottom_margin"
    />
    <EditText

            android:background="@drawable/edittxt_style"
            android:drawableLeft="@drawable/username_icon"
            android:hint="@string/last_name"
            style="@style/Style_text"
            android:layout_marginBottom="@dimen/bottom_margin"
    />
    <EditText

            android:background="@drawable/edittxt_style"
            style="@style/Style_text"
            android:drawableLeft="@drawable/email_icon"
            android:hint="@string/email"
            android:layout_marginBottom="@dimen/bottom_margin"
    />

    <EditText

            android:background="@drawable/edittxt_style"
            style="@style/Style_text"
            android:drawableLeft="@drawable/password_icon"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="@dimen/bottom_margin"
    />

    <EditText

            android:background="@drawable/edittxt_style"
            style="@style/Style_text"
            android:drawableLeft="@drawable/cpassword_icon"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_marginBottom="23dp"
    />


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#E91C1A"
            style="@style/Style_text"
            android:orientation="horizontal">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="@dimen/editText_size"
                android:textColor="@color/whiteColor"
        />

        <RadioGroup
                android:layout_marginLeft="34dp"
                android:layout_marginRight="34dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">



            <RadioButton
                    android:id="@+id/male_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textSize="@dimen/editText_size"
                    android:textColor="@color/whiteColor"
            />

            <RadioButton
                    android:id="@+id/female_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textSize="@dimen/editText_size"
                    android:textColor="@color/whiteColor"
            />
        </RadioGroup>

    </LinearLayout>

    <EditText

            android:background="@drawable/edittxt_style"
            style="@style/Style_text"
            android:drawableLeft="@drawable/cellphone"
            android:hint="  Phone Number"
            android:inputType="textPassword"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="@dimen/bottom_margin"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/checked_icon"
            android:text="  I agree the Terms and Condition"
            android:textSize="13dp"
            android:textColor="@color/whiteColor"
            android:layout_marginBottom="@dimen/bottom_margin"
    />

    <Button
            android:id="@+id/btn_register"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:textSize="@dimen/btn_size"
            android:text="@string/register"
            android:textAlignment="gravity"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/RedColor"
    />


</LinearLayout>


