<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Layout_margin"
        android:orientation="vertical">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/neostore"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:padding="@dimen/text_padding"

    />
    <EditText
            style="@style/app_TextStyle"
            android:id="@+id/email_add"
            android:paddingStart="@dimen/start_padding"
            android:background="@drawable/edit_text_style"
            android:hint="@string/username"
            android:drawablePadding="@dimen/start_padding"
            android:drawableLeft="@drawable/username_icon"
            android:textColorHint="@color/whiteColor"
            android:textSize="@dimen/editText_size"
            android:layout_marginBottom="14dp"
            android:paddingLeft="@dimen/start_padding"/>

    <EditText


            style="@style/app_TextStyle"
            android:paddingStart="@dimen/start_padding"
            android:background="@drawable/edit_text_style"
            android:id="@+id/password_st"
            android:drawablePadding="@dimen/start_padding"
            android:drawableLeft="@drawable/password_icon"
            android:hint="@string/password"
            android:textSize="@dimen/editText_size"
            android:textColorHint="@color/whiteColor"
            android:layout_marginBottom="34dp"
            android:paddingLeft="@dimen/start_padding"/>

    <Button
            android:id="@+id/txt_forgotpwd"
            android:text="@string/login"
            android:textColor="@color/RedColor"
            android:textSize="@dimen/btn_size"
            android:layout_marginBottom="22dp"
            android:background="@drawable/rounded_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="@dimen/editText_size"
            android:textColor="@color/whiteColor"
            android:textAlignment="center"

    />





</LinearLayout>


