<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/RedColor"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
>
    <include layout="@layout/toolbar"></include>

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfile"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/default_user_pic"
            android:foregroundGravity="center_horizontal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp"
            android:layout_marginRight="140dp"/>

    <EditText
            android:id="@+id/et_first_name"
            android:background="@drawable/edit_text_style"
            style="@style/app_TextStyle"
            android:paddingStart="10dp"
            android:drawablePadding="10dp"
            android:textColor="@color/whiteColor"
            android:drawableLeft="@drawable/username_icon"
            android:hint="@string/first_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="236dp"
            android:paddingLeft="10dp"/>

    <EditText
            android:id="@+id/et_last_name"
            android:background="@drawable/edit_text_style"
            style="@style/app_TextStyle"
            android:paddingStart="10dp"
            android:textColor="@color/whiteColor"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/username_icon"
            android:hint="@string/last_name"
            app:layout_constraintTop_toBottomOf="@id/et_first_name"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingLeft="10dp" android:layout_marginTop="20dp"/>

    <EditText
            android:id="@+id/et_email_add"
            android:background="@drawable/edit_text_style"
            style="@style/app_TextStyle"
            android:paddingStart="10dp"
            android:textColor="@color/whiteColor"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/email_icon"
            android:hint="@string/email"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="360dp"/>

    <EditText
            android:id="@+id/et_phone_number"
            android:background="@drawable/edit_text_style"
            style="@style/app_TextStyle"
            android:textColor="@color/whiteColor"
            android:paddingStart="10dp"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/cellphone"
            android:hint="@string/phone_number"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="424dp" app:layout_constraintEnd_toEndOf="parent"
    />

    <EditText
            android:id="@+id/et_birth_date"
            android:background="@drawable/edit_text_style"
            style="@style/app_TextStyle"
            android:paddingStart="10dp"
            android:drawablePadding="10dp"
            android:textColor="@color/whiteColor"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/dob_icon"
            android:hint="Birth Date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"


            android:layout_marginTop="490dp"/>
    <Button
            android:id="@+id/btn_submit"
            style="@style/app_TextStyle"
            android:background="@drawable/rounded_btn"
            android:text="SUBMIT"
            android:textColor="@color/RedColor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="564dp"/>
</android.support.constraint.ConstraintLayout>